Small changes fixing broken links and spacing

--- a/CSCI150_Project_Pages/mainStyleSheet.css
+++ b/CSCI150_Project_Pages/mainStyleSheet.css
@@ -159,6 +159,10 @@ div.newUser {
     text-align: center;
 }
 
+div.interactionMenu {
+    margin-top: 100px
+}
+
 @media screen and (min-width:768px) {
     div.mainHolder {
         padding-bottom: 50px;
